# tb_variant_filter

./: .gitignore  README.md  conda_requirements.txt  github_test_environment.yml  pyproject.toml  setup.cfg  setup.py  test_environment.yml  tox.ini
.circleci/: config.yml
.github/workflows/: tb_variant_filter.yml
bedfiles/: modlin_ibs.bed  pe_ppe.bed  uvp.bed
conda/: CONDA.md  meta.yaml
galaxy/: .shed.yml  tb_variant_filter.xml
src/tb_variant_filter/: __init__.py  bed_to_regions_cli.py  cli.py  region_list.py  regions_to_bed.py
src/tb_variant_filter/filters/: __init__.py  alt_percentage_filter.py  close_to_indel_filter.py  min_depth_filter.py  region_filter.py  snv_only_filter.py
src/tb_variant_filter/masks/: __init__.py  farhat_rlc.py  farhat_rlc_lowmap.py  mtbseq.py  pe_ppe.py  tbprofiler.py  uvp.py
src/tests/: test_close_to_indel_filter.py  test_farhat_rlc.py  test_farhat_rlc_lowmap.py  test_min_depth_filter.py  test_mtbseq.py  test_pe_ppe.py  test_region_filter.py  test_tbprofiler.py  test_uvp.py  utils.py
src/tests/data/: test_input3.vcf  test_output8.vcf
tb_variant_filter/: __init__.py  cli.py  region_list.py  regions_to_bed.py
tb_variant_filter/filters/: __init__.py  alt_percentage_filter.py  close_to_indel_filter.py  min_depth_filter.py  region_filter.py
tb_variant_filter/masks/: __init__.py  farhat_rlc.py  mtbseq.py  pe_ppe.py  tbprofiler.py  uvp.py
test/: test_alt_percentage_filter.py  test_farhat_rlc.py  test_mtbseq.py  test_pe_ppe.py  test_region_filter.py  test_region_list.py  test_regionfilter.py  test_snv_filter.py  test_tbprofiler.py  test_uvp.py  utils.py
test/data/: test_input1.vcf  test_output1.vcf  test_output2.vcf
test/results/: README.md
