[metadata]
name = tb_variant_filter
version = 0.3.1
author = "Peter van Heusden"
author_email = pvh@sanbi.ac.za
description = This tool offers multiple options for filtering variants (in VCF files, relative to M. tuberculosis H37Rv).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/COMBAT-TB/tb_variant_filter
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
keywords=
    bioinformatics
    tuberculosis
[options]
package_dir = src
packages = find:
python_requires = >=3.7
install_requires = 
    intervaltree
    lxml
    pandas
    vcfpy
    requests
    py2neo>=4.2.0
extras_require =
    test=pytest>=4.3.1
entry_points =
    [console_scripts]
    tb_variant_filter = tb_variant_filter.cli:main
    tb_region_list_to_bed = tb_variant_filter.regions_to_bed:main


